Bug 534409 - Fix incorrect sizing of the <audio> element when it has a non-auto width or height. r=doublec